replace getLast method to access last item in array